[package]
name = "cql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
futures-util = "0.3.31"
scylla = { version = "0.14.0", features = ["bigdecimal-04", "chrono-04", "num-bigint-04"] }
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.214", optional = true }
uuid = { version = "1", features = ["serde"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.132"
indexmap = { version = "2.6.0", features = ["serde"] }

[features]
default = ["serde"]
serde = ["dep:serde"]


