[package]
name = "cql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
futures-util = "0.3.31"
scylla = { version = "0.14.0", features = ["bigdecimal-04", "chrono-04", "num-bigint-04"] }
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.214"
uuid = { version = "1", features = ["serde"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
serde_json = { version = "1.0.132", optional = true }
indexmap = { version = "2.6.0", features = ["serde"] }
csv = { version = "1.3.0", optional = true }

[features]
default = ["json", "csv"]
json = ["dep:serde_json"]
csv = ["dep:csv"]


